--- a/Translations/German/text-improvementClass-change.xml
+++ b/Translations/German/text-improvementClass-change.xml
@@ -2,7 +2,7 @@
 <!-- edited with XMLSpy v2014 rel. 2 (x64) (http://www.altova.com) by Soren Johnson (private) -->
 <Root>
 	<!--Assets/GameAssets/Resources/Infos/improvement.xml-->
-	<!--NOTE: improvement names that are mass nouns or plural do not need multiple types in Translation-->
+	<!--NOTE: improvement names that are mass nouns or plural do not need multiple types in English-->
 	<Entry>
 		<zType/>
 		<Translation/>
@@ -58,10 +58,6 @@
 	<Entry>
 		<zType>TEXT_IMPROVEMENTCLASS_HAMLET</zType>
 		<Translation>Dorf~ein Dorf~Dörfern</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_IMPROVEMENTCLASS_AQUEDUCT</zType>
-		<Translation>Aquädukt~ein Aquädukt~Aquädukten</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENTCLASS_BARRACKS</zType>
